{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "d5c0086d-794a-439f-ad02-131bb2110d01",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "27fe8ddc-7226-4087-b525-0d9a77a8317b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "fc5e178c-eddb-4f5d-b86b-91bbcfb85ec4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2c2893f9-5481-4caa-8209-aec5fe5a9f0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Climb",
                    "type": "Button",
                    "id": "84492d61-a00d-4a19-9e6f-e200dfe25f51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "73071fa1-3cf4-4b69-96d9-fc74af94d563",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "02e759f2-0346-40b7-b797-1a3080617909",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "25dbb6f5-8fe4-418c-8fd3-1745e36fb545",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "JoyStick",
                    "id": "2461e2e0-e3fc-4454-95a7-248e8c33e86e",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "0d87f033-5dad-471d-bb38-37e7ac286912",
                    "path": "<Joystick>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "f5290a92-65a6-414f-971d-2a45dac86b6b",
                    "path": "<Joystick>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "27e2debb-d288-4f6a-a895-e8c067f0978e",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1d82aba-6137-49d9-8f27-efdbe9f06b0a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07c22213-b63c-47af-a999-405d3f147d02",
                    "path": "<Keyboard>/w",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Climb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}